Updates to Chapter 6

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@
 .vs/SQLServer2025QueryPerformanceTuning/v17/DocumentLayout.backup.json
 .vs/SQLServer2025QueryPerformanceTuning/v17/DocumentLayout.json
 .vs/SQLServer2025QueryPerformanceTuning/v17/DocumentLayout.json
+/.vs/SQLServer2025QueryPerformanceTuning/v17/DocumentLayout.json
+/.vs/SQLServer2025QueryPerformanceTuning/v17/.wsuo
